Modify link_to parameters

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
 		<div class="navbar-header">
 
-			<%= link_to 'Sample Blog', articles_path, :class => "navbar-brand" %>
+			<%= link_to 'Sample Blog', articles_path, class: "navbar-brand" %>
 
 		</div>
 
