--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,15 @@
 	<!-- Static navbar -->
 	<nav class="navbar navbar-default" role="navigation">
 
-		<div class="navbar-header">
-
+	  <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
 			<%= link_to 'Sample Blog', articles_path, class: "navbar-brand" %>
-
 		</div>
 
 		<div class="navbar-collapse collapse">
