--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -3,16 +3,16 @@
 <%= form_for :article, url: article_path(@article), method: :put do |f| %>
 	<p>
 		<%= f.label :title %><br />
-		<%= f.text_field :title, size: '60' %>
+		<%= f.text_field :title, class: 'form-control' %>
 	</p>
 
 	<p>
 		<%= f.label :text %><br />
-		<%= f.text_area :text, size: '60x12' %>
+		<%= f.text_area :text, class: 'form-control', rows: 5 %>
 	</p>
 
 	<p>
-		<%= f.submit %>
+		<%= f.submit class: 'btn btn-primary' %>
 	</p>
 
 <% end %>
