--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,12 +18,12 @@
 <%= form_for([@article, @article.comments.build]) do |f| %>
 
 	<p>
-		<%= f.label :body %><br />
-		<%= f.text_area :body %>
+		<%= f.label :body, size: 60 %><br />
+		<%= f.text_area :body, class: 'form-control' %>
 	</p>
 
 	<p>
-		<%= f.submit %>
+		<%= f.submit 'Add comment', class: 'btn btn-primary' %>
 	</p>
 <% end %>
 
