Add author verification

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,8 @@
 	<p class="notice"><%= notice %></p>
 	<p class="alert"><%= alert %></p>
 
+  <p style="color: red; background-color: yellow; width: 27%"><b><%= flash[:error] %></b></p>
+
 	<%= yield %>
 
 </div>
