Add Contact Us menu and form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
 				<li><%= link_to 'New Article', new_article_path %></li>
 			  <li><%= link_to 'Terms', terms_path %></li>
 			  <li><%= link_to 'About', about_path %></li>
+			  <li><%= link_to 'Contact Us', new_contacts_path %></li>
 			</ul>
 
 			<ul class="nav navbar-nav navbar-right">
