--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -13,16 +13,16 @@
 	
 	<p>
 		<%= f.label :email %><br />
-		<%= f.text_field :email %>
+		<%= f.text_field :email, class: 'form-control' %>
 	</p>
 
 	<p>
 		<%= f.label :message %><br />
-		<%= f.text_area :message %>
+		<%= f.text_area :message, class: 'form-control' %>
 	</p>
 
 	<p>
-		<%= f.submit 'Send message' %>
+		<%= f.submit 'Send message', class: 'btn btn-primary' %>
 	</p>
 
 <% end %>
