--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit article</h1>
+<h1><%= t('articles.edit') %></h1>
 
 <%= form_for :article, url: article_path(@article), method: :put do |f| %>
 	<p>
