Some interface changes

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @article.title %></h1>
 <p>
-	<%= @article.text %>
+	<%= simple_format(@article.text) %>
 </p>
 
 <% @article.comments.each do |comment| %>
