deploy EN internationalization to project

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -22,7 +22,7 @@
 	</p>
 
 	<p>
-		<%= f.submit 'Send message', class: 'btn btn-primary' %>
+		<%= f.submit t('contacts.send_message'), class: 'btn btn-primary' %>
 	</p>
 
 <% end %>
