--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,7 +15,7 @@
 	<% if current_user.username ==  @users.find(article.user_id).username %>
 		<!-- <%= link_to "Show", article_path(article), class: "btn btn-success btn-xs" %> -->
 		<%= link_to "Edit", edit_article_path(article), class: "btn btn-warning btn-xs" %>
-		<%= link_to "Delete", article_path(article), class: "btn btn-danger btn-xs", method: :delete, data: { confirm: "Are you sure?" } %>
+		<%= link_to "Delete", article_path(article), class: "btn btn-danger btn-xs", method: :delete, data: { confirm: t('confirms.sure') } %>
 	<% end %>
 </p>
 
