--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,7 +22,7 @@
 	</p>
 
 	<p>
-		<%= f.submit 'Add comment', class: 'btn btn-primary' %>
+		<%= f.submit t('articles.add_comment'), class: 'btn btn-primary' %>
 	</p>
 <% end %>
 
