articles#index bug fixed for unsigner user

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,10 +12,12 @@
 	<!-- <button type="button" class="btn btn-success btn-xs" onclick="location.href='<%= article_path(article) %>'">Show</button>
 	<button type="button" class="btn btn-info btn-xs" onclick="location.href='<%= edit_article_path(article) %>'">Edit</button> -->
 	<i>Posted by <b><%= @users.find(article.user_id).username %></b></i><br />
-	<% if current_user.username ==  @users.find(article.user_id).username %>
-		<!-- <%= link_to "Show", article_path(article), class: "btn btn-success btn-xs" %> -->
-		<%= link_to "Edit", edit_article_path(article), class: "btn btn-warning btn-xs" %>
-		<%= link_to "Delete", article_path(article), class: "btn btn-danger btn-xs", method: :delete, data: { confirm: t('confirms.sure') } %>
+	<% if user_signed_in? %>
+		<% if current_user.username ==  @users.find(article.user_id).username %>
+			<!-- <%= link_to "Show", article_path(article), class: "btn btn-success btn-xs" %> -->
+			<%= link_to "Edit", edit_article_path(article), class: "btn btn-warning btn-xs" %>
+			<%= link_to "Delete", article_path(article), class: "btn btn-danger btn-xs", method: :delete, data: { confirm: t('confirms.sure') } %>
+		<% end %>
 	<% end %>
 </p>
 
