Add translation to blog_name field

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-			<%= link_to 'Sample Blog', articles_path, class: "navbar-brand" %>
+			<%= link_to t('main_layout.blog_name'), articles_path, class: "navbar-brand" %>
 		</div>
 
 		<div class="navbar-collapse collapse">
