--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -8,11 +8,11 @@
 
 	<p>
 		<%= f.label :text %><br />
-		<%= f.text_area :text, class: 'form-control', rows: 5 %>
+		<%= f.text_area :text, class: 'form-control', rows: 10 %>
 	</p>
 
 	<p>
-		<%= f.submit class: 'btn btn-primary' %>
+		<%= f.submit t('articles.submit'), class: 'btn btn-primary' %>
 	</p>
 
 <% end %>
