--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -12,7 +12,7 @@
 	</p>
 
 	<p>
-		<%= f.submit class: 'btn btn-primary' %>
+		<%= f.submit t('articles.create'), class: 'btn btn-primary' %>
 	</p>
 
 <% end %>
