--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -1,4 +1,4 @@
-<h1>Terms of Service</h1>
+<h1><%= t('pages.terms_header') %></h1>
 <p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  <%= t('pages.terms_info') %>
 </p>
