--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2><%= t('headers.sign_up') %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -16,7 +16,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %></div>
     </br>
 
-  <div><%= f.submit "Sign up", class: 'btn btn-primary' %></div>
+  <div><%= f.submit t('buttons.sign_up'), class: 'btn btn-primary' %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
