--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,13 +10,13 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+  <div><%= f.label :password %> <i>(<%= t('devise.registrations.leave_blank') %>)</i><br />
     <%= f.password_field :password, autocomplete: "off", class: 'form-control' %></div>
 
   <div><%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %></div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+  <div><%= f.label :current_password %> <i>(<%= t('devise.registrations.oldpass_to_confirm') %>)</i><br />
     <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %></div>
     </br>
 
