--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,13 +1,16 @@
 <h1>Edit profile</h1>
 
-<%= form_for :profile, url: user_profile_path(current_user.id), method: :put do |f| %>
+<img src="<%= @profile.image.attachment %>" /></br>
+<%= link_to "Change avatar", edit_image_path(@image) %>
 
+<%= form_for :profile, url: user_profile_path(current_user.id), method: :put do |f| %>
 	<p>
 		<%= f.label :description %><br />
 		<%= f.text_field :description, class: 'form-control' %>
 	</p>
 
-		<%= f.submit 'Submit', class: 'btn btn-primary' %>
+	<p>
+	<%= f.submit 'Submit', class: 'btn btn-primary' %>
 	</p>
-
 <% end %>
+
