Modify profile editing

--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -1,9 +1,16 @@
 <h2>Set Image</h2>
 
+
+<% if @image.attachment.size == 0 %>
+	<h3> Avatar is missing </h3></br>
+<% else %>
+	<img src="<%= @image.attachment %>" />
+	</br>
+	</br>
+<% end %>
+
 <div class="well">
   <%= form_for @image, html: { multipart: true } do |f| %>
-    <%= f.label :description %></br>
-    <%= f.text_field :description %></br>
     <%= f.label :attachment %></br>
     <%= f.file_field :attachment %></br>
     <%= f.submit "Save", class: "btn btn-primary" %>
