--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,16 +1,28 @@
 <h1>Edit profile</h1>
 
-<img src="<%= @profile.image.attachment %>" /></br>
-<%= link_to "Change avatar", edit_image_path(@image) %>
+
+<% if @image.attachment.size == 0 %>
+	<%= link_to "Upload avatar", edit_image_path(@image) %>
+	</br>
+	</br>
+<% else %>
+	<img src="<%= @profile.image.attachment %>" /></br>
+	<%= link_to "Change avatar", edit_image_path(@image) %>
+	</br>
+	</br>
+<% end %>
+
 
 <%= form_for :profile, url: user_profile_path(current_user.id), method: :put do |f| %>
+
 	<p>
 		<%= f.label :description %><br />
-		<%= f.text_field :description, class: 'form-control' %>
+		<%= f.text_area :description, class: 'form-control', rows: 5 %>
 	</p>
 
 	<p>
 	<%= f.submit 'Submit', class: 'btn btn-primary' %>
 	</p>
+
 <% end %>
 
