Change show profile view

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -9,3 +9,6 @@
 <% end %>
 
 <%= @profile.description %>
+</br>
+</br>
+<%= link_to 'Edit profile', edit_user_profile_path(current_user.id), class: "btn btn-warning" %>
