--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
 			<ul class="nav navbar-nav navbar-right">
 			  <li>
 				<% if user_signed_in? %>
-					<li><%= link_to t('main_layout.hello') + current_user.username + '!', edit_user_profile_path(current_user.id) %></li>
+					<li><%= link_to t('main_layout.hello') + current_user.username + '!', user_profile_path(current_user.id) %></li>
 					<li><%= link_to t('action_links.sign_out'), destroy_user_session_path, method: :delete %></li>
 				<% else %>
 					<li><%= link_to t('action_links.sign_in'), new_user_session_path %></li>
