--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -11,4 +11,6 @@
 <%= @profile.description %>
 </br>
 </br>
-<%= link_to 'Edit profile', edit_user_profile_path(current_user.id), class: "btn btn-warning" %>
+<% if @profile.user_id == current_user.id %>
+	<%= link_to 'Edit profile', edit_user_profile_path(current_user.id), class: "btn btn-warning" %>
+<% end %>
