--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -3,7 +3,7 @@
 <% if @profile.image.attachment.size == 0 %>
 	<h3> Avatar is missing </h3></br>
 <% else %>
-	<img src="<%= @profile.image.attachment %>" />
+	<%= image_tag @profile.image.attachment_url %>
 	</br>
 	</br>
 <% end %>
