--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,14 +1,18 @@
 <h1><%= t('articles.new') %></h1>
 
-<%= form_for :article, url: articles_path do |f| %>
+<%= form_for @article, url: articles_path do |f| %>
 	<p>
 		<%= f.label :title %><br />
 		<%= f.text_field :title, class: 'form-control' %>
 	</p>
 
+	<%= f.fields_for :images do |i| %>
+		<%= i.file_field :attachment, class: 'well' %></br>
+	<% end %>
+
 	<p>
 		<%= f.label :text %><br />
-		<%= f.text_area :text, class: 'form-control', rows: 5 %>
+		<%= f.text_area :text, class: 'form-control', rows: 7 %>
 	</p>
 
 	<p>
