--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -7,7 +7,7 @@
 	</p>
 
 	<%= f.fields_for :images do |i| %>
-		<%= i.file_field :attachment, class: 'well' %></br>
+		<%= i.file_field :attachment, class: 'well' %><br />
 	<% end %>
 
 	<p>
