--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,5 +3,5 @@
   <%= t('pages.about_info') %>
 </p>
 
-<%= link_to t('links.terms'), terms_path %></br>
+<%= link_to t('links.terms'), terms_path %><br />
 <%= link_to t('links.feedback'), new_contacts_path %>
