--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,6 +1,6 @@
  <h1>User profile</h1>
 
-<% if @profile.image.attachment.size == 0 %>
+<% unless @profile.image %>
 	<h3> Avatar is missing </h3><br />
 <% else %>
 	<%= image_tag @profile.image.attachment_url %>
