--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
   <title>Blog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link data-require="bootstrap@*" data-semver="3.2.0" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.css" />
-  <script data-require="bootstrap@*" data-semver="3.2.0" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.js"></script>
   <script data-require="jquery@*" data-semver="2.1.1" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script data-require="bootstrap@*" data-semver="3.2.0" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.js"></script>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -15,43 +15,45 @@
 <div class = "container">
 	<!-- Static navbar -->
 	<nav class="navbar navbar-default" role="navigation">
+		<div class="container-fluid">
 
-	  <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-			<%= link_to t('main_layout.blog_name'), articles_path, class: "navbar-brand" %>
-		</div>
+			<!-- Brand and toggle get grouped for better mobile display -->
+	    	<div class="navbar-header">
+			    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				    <span class="sr-only">Toggle navigation</span>
+				    <span class="icon-bar"></span>
+				    <span class="icon-bar"></span>
+				    <span class="icon-bar"></span>
+			    </button>
+				<%= link_to t('main_layout.blog_name'), articles_path, class: "navbar-brand" %>
+			</div>
 
-		<div class="navbar-collapse collapse">
+			<div class="navbar-collapse collapse">
 
-			<ul class="nav navbar-nav">
-				<li><%= link_to t('main_layout.new_article'), new_article_path %></li>
-			  <li><%= link_to t('main_layout.about'), about_path %></li>
-			</ul>
+				<ul class="nav navbar-nav">
+					<li><%= link_to t('main_layout.new_article'), new_article_path %></li>
+				  <li><%= link_to t('main_layout.about'), about_path %></li>
+				</ul>
 
-			<ul class="nav navbar-nav navbar-right">
-			  <li>
-				<% if user_signed_in? %>
-					<li><%= link_to t('main_layout.hello') + current_user.username + '!', user_profile_path(current_user.id) %></li>
-					<li><%= link_to t('action_links.sign_out'), destroy_user_session_path, method: :delete %></li>
-				<% else %>
-					<li><%= link_to t('action_links.sign_in'), new_user_session_path %></li>
-				<% end %>
-			  </li>
-			</ul>
+				<ul class="nav navbar-nav navbar-right">
+				  <li>
+					<% if user_signed_in? %>
+						<li><%= link_to t('main_layout.hello') + current_user.username + '!', user_profile_path(current_user.id) %></li>
+						<li><%= link_to t('action_links.sign_out'), destroy_user_session_path, method: :delete %></li>
+					<% else %>
+						<li><%= link_to t('action_links.sign_in'), new_user_session_path %></li>
+					<% end %>
+				  </li>
+				</ul>
 
-		</div><!--/.nav-collapse -->
+			</div><!--/.nav-collapse -->
+		</div><!-- /.container-fluid -->
 	</nav>
 
 	<p class="notice"><%= notice %></p>
 	<p class="alert"><%= alert %></p>
 
-  <p style="color: red; background-color: yellow; width: 30%"><b><%= flash[:error] %></b></p>
+  	<p style="color: red; background-color: yellow; width: 30%"><b><%= flash[:error] %></b></p>
 
 	<%= yield %>
 
