some frontend refactoring

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -33,17 +33,21 @@
 			</div>
 
 			<div class="col-xs-2">
-				<%= link_to 'Rating: ', votemap_article_path(article) %>
-				<span class="badge">
-					<% s=0 %>
-					<% article.votes.each do |vot|  %>
-					<% s += vot.value %>
-					<% end %>
-					<%= s %>
-				</span>
+				<div class="row">
+					<%= link_to 'Rating: ', votemap_article_path(article) %>
+					<span class="badge">
+						<% s=0 %>
+						<% article.votes.each do |vot|  %>
+						<% s += vot.value %>
+						<% end %>
+						<%= s %>
+					</span>
+				</div>
 				<!-- <button class="btn btn-primary" onclick="rating_inc()">Click me!</button> -->
-				<%= link_to '+', voteup_article_path(article), class: "btn btn-success btn-xs" %>
-				<%= link_to '-', votedown_article_path(article), class: "btn btn-danger btn-xs" %>
+				<div class="row">
+					<%= link_to '+', voteup_article_path(article), class: "btn btn-success btn-xs" %>
+					<%= link_to '-', votedown_article_path(article), class: "btn btn-danger btn-xs" %>
+				</div>
 			</div>
 		</div>
 
