--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,29 +9,44 @@
 </p>
 
 <% @article.comments.each do |comment| %>
-	<p>
-		<hr />
+<div class="row">
+
+	<hr />
+	<div class="col-xs-2">
 		<% if comment.user.profile.image %>
 			<%= image_tag comment.user.profile.image.attachment_url(:thumb) %><br />
 		<% end %>		
 		<i><b><%= link_to comment.user.username, user_profile_path(comment.user_id) %></b> <%= t('articles.commented') %></i>
-		<br />
-		<br />
-		<%= comment.body %>
-	</p>
-	<div>
-		<%= link_to 'Rating: ', votemap_article_comment_path(@article, comment) %>
-		<span class="badge" >
-			<% s=0 %>
-			<% comment.votes.each do |vot|  %>
-			<% s += vot.value %>
-			<% end %>
-			<%= s %>
-		</span>
-
-		<%= link_to '+', voteup_article_comment_path(@article, comment), class: "btn btn-success btn-xs" %>
-		<%= link_to '-', votedown_article_comment_path(@article, comment), class: "btn btn-danger btn-xs" %> 
 	</div>
+
+	<div class="col-xs-8">
+		<%= comment.body %>
+	</div>
+
+	<div class="col-xs-2">
+		<div class="row">
+			<%= link_to 'Rating: ', votemap_article_comment_path(@article, comment) %>
+			<span class="badge" >
+				<% s=0 %>
+				<% comment.votes.each do |vot|  %>
+				<% s += vot.value %>
+				<% end %>
+				<%= s %>
+			</span>
+		</div>
+
+		<div class="row">
+			<% if user_signed_in? %>
+				<% unless comment.user == current_user %>
+					<%= link_to '+', voteup_article_comment_path(@article, comment), class: "btn btn-success btn-xs" %>
+					<%= link_to '-', votedown_article_comment_path(@article, comment), class: "btn btn-danger btn-xs" %> 
+				<% end %>
+			<% end %>
+		</div>
+
+	</div>
+
+</div>
 <% end %>
 
 <hr />
