--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -11,24 +11,57 @@
 <%= @profile.description %>
 <br />
 <br />
+
+<div>
+	<%= link_to 'Rating: ', votemap_user_profile_path %>
+	<span class="badge" >
+		<% s=0 %>
+		<% @profile.votes.each do |vot|  %>
+		<% s += vot.value %>
+		<% end %>
+		<%= s %>
+	</span>
+</div>
+
 <% if user_signed_in? %>
 	<div>
-		<%= link_to 'Rating: ', votemap_user_profile_path %>
-		<span class="badge" >
-			<% s=0 %>
-			<% @profile.votes.each do |vot|  %>
-			<% s += vot.value %>
-			<% end %>
-			<%= s %>
-		</span>
 		<% unless @profile.user == current_user %>
 			<%= link_to '+', voteup_user_profile_path, class: "btn btn-success btn-xs" %>
-			<%= link_to '-', votedown_user_profile_path, class: "btn btn-danger btn-xs" %> 
+			<%= link_to '-', votedown_user_profile_path, class: "btn btn-danger btn-xs" %>
+			<br />
+			<br />
 		<% end %>
-		<br />
-		<br />
-	</div>  
+	</div>
+<% end %>
+
+<div>
+	Posts rating:
+	<span class="badge" >
+		<% s=0 %>
+		<% @profile.user.articles.each do |article|  %>
+			<% article.votes.each do |vot| %>
+				<% s += vot.value %>
+			<% end %>
+		<% end %>
+		<%= s %>
+	</span>
+</div>
+
+<div>
+	Comments rating:
+	<span class="badge" >
+		<% s=0 %>
+		<% @profile.user.comments.each do |comment|  %>
+			<% comment.votes.each do |vot| %>
+				<% s += vot.value %>
+			<% end %>
+		<% end %>
+		<%= s %>
+	</span>
+</div>
+
+<% if user_signed_in? %>
 	<% if @profile.user_id == current_user.id %>
   		<%= link_to 'Edit profile', edit_user_profile_path(current_user.id), class: "btn btn-warning" %>
-  	<% end %>
+  <% end %>
 <% end %>
