--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -2,6 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.voteupAction {
- background-color: green; cursor: pointer; 
-}
+// .voteupAction {
+//  background-color: green; cursor: pointer; 
+// }
