Modify Result span, add votevalue ID

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -35,7 +35,7 @@
 			<div class="col-xs-2">
 				<div class="row">
 					<%= link_to 'Rating: ', votemap_article_path(article) %>
-					<span class="badge">
+					<span class="badge" id="votevalue<%= article.id %>">
 						<% s=0 %>
 						<% article.votes.each do |vot|  %>
 						<% s += vot.value %>
@@ -43,14 +43,11 @@
 						<%= s %>
 					</span>
 				</div>
-				<!-- <button class="btn btn-primary" onclick="rating_inc()">Click me!</button> -->
+
 				<% if user_signed_in? %>
 					<% unless article.user == current_user %>
 						<div class="row">
-						<!--
-							<%= link_to '+', voteup_article_path(article), class: "btn btn-success btn-xs" %>
-						-->
-							<%= link_to '+', '#', id: 'voteup', class: "btn btn-success btn-xs", data: {article_id: article.id} %>						
+							<%= link_to '+', '#', id: 'voteup', class: "btn btn-success btn-xs", data: {article_id: article.id} %>
 							<%= link_to '-', votedown_article_path(article), class: "btn btn-danger btn-xs" %>
 						</div>
 					<% end %>
