Modify votedown button, add some ajax

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -48,7 +48,10 @@
 					<% unless article.user == current_user %>
 						<div class="row">
 							<%= link_to '+', '#', id: 'voteup', class: "btn btn-success btn-xs", data: {article_id: article.id} %>
+							<%= link_to '-', '#', id: 'votedown', class: "btn btn-danger btn-xs", data: {article_id: article.id} %>
+							<!-- 
 							<%= link_to '-', votedown_article_path(article), class: "btn btn-danger btn-xs" %>
+							 -->
 						</div>
 					<% end %>
 				<% end %>
