--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -25,7 +25,7 @@
 		<div class="row">
 			<div class="col-xs-3">
 				<span class="badge" >
-					Number of comments: <%= article.comments_count %>
+					<%= t('infostrings.commentsnum') %> <%= article.comments_count %>
 				</span>
 			</div>
 
@@ -34,7 +34,7 @@
 
 			<div class="col-xs-2">
 				<div class="row">
-					<%= link_to 'Rating: ', votemap_article_path(article) %>
+					<%= link_to t('infostrings.rating'), votemap_article_path(article) %>
 					<span class="badge" id="votevalue<%= article.id %>">
 						<% s=0 %>
 						<% article.votes.each do |vot|  %>
