--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -17,9 +17,9 @@
 	</p>
 
 	<%= f.fields_for :images do |i| %>
-		<%= i.file_field :attachment, class: 'well' %><br />
+		<%= i.file_field :attachment, class: 'well filestyle', data: "Find file" %><br />
 	<% end %>
-
+	
 	<p>
 		<%= f.label :text %><br />
 		<%= f.text_area :text, class: 'form-control', rows: 7 %>
